# aws-serverless-template

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  mypy.ini  package.json  pyproject.toml  requirements.txt  serverless.yaml
.github/: dependabot.yml
.github/workflows/: default.yml
compose/dev/: Dockerfile
compose/lambda/: Dockerfile
docs/: CONTRIBUTING.md
src/: logger.py  main.py  settings.py
tests/: conftest.py  test_app.py
