[tool.poetry]
name = "app"
version = "0.1.0"
description = "An app that does something"
authors = ["Henry"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.1.0"
isort = "^5.10.1"
bandit = "^1.7.2"
flake8 = "^4.0.1"
mypy = "^0.931"
pytest = "^7.0.1"
fastapi = "^0.70.0"
starlette = "^0.16.0"
uvicorn = {extras = ["standard"], version = "^0.17.4"}
mangum = "^0.12.4"
python-json-logger = "^2.0.2"
requests = "^2.27.1"
types-requests = "^2.27.9"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

